--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "5b289667-34e7-400b-b197-4c1a14d08939"
 authors = ["Sam Atman <atmanistan@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
+
 [compat]
 julia = "1"
 
