--- a/Project.toml
+++ b/Project.toml
@@ -3,10 +3,13 @@ uuid = "5b289667-34e7-400b-b197-4c1a14d08939"
 authors = ["Sam Atman <atmanistan@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
+
 [compat]
-julia = "1"
 Aqua = "0.8"
 Test = "1"
+julia = "1"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
