--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,8 @@ AbstractTrees = "0.4"
 Aqua = "0.8"
 StringViews = "1"
 Test = "1"
-julia = "1"
+julia = "1.8"
+Unicode = "1"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
